dark mode and optimization fix

--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -11,7 +11,6 @@
 }
 
 .stack {
-    box-shadow: 2px 2px 4px 1px rgb(0 0 0 / 29%);
     margin-bottom: 1rem;
     padding: 1rem;
 }
